--- a/composer.json
+++ b/composer.json
@@ -17,20 +17,21 @@
         }
     ],
     "require": {
-        "php" : "~5.6|~7.0"
+        "php": "^7.1",
+        "symfony/process": "^4.1"
     },
     "require-dev": {
-        "phpunit/phpunit" : ">=5.4.3",
-        "squizlabs/php_codesniffer": "^2.3"
+        "phpunit/phpunit" : "^7.0",
+        "squizlabs/php_codesniffer": "^3.0"
     },
     "autoload": {
         "psr-4": {
-            "liberpater\\selinux\\": "src"
+            "Liberpater\\Selinux\\": "src"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "liberpater\\selinux\\": "tests"
+            "Liberpater\\Selinux\\": "tests"
         }
     },
     "scripts": {
